2008-11-07  Andreas Kupries <andreas_kupries@users.sourceforge.net>

	* graphops.tcl: Continued integration of graph algorithms.
	* graphops.man: Minimum spanning tree/forest as per Prim.
	* graph/tests/ops/prim.test: Bumped version to 0.2
	* graph/tests/XOpsControl:
	* graph/tests/XOpsSetup:
	* pkgIndex.tcl:

2008-11-06  Andreas Kupries <andreas_kupries@users.sourceforge.net>

	* graphops.tcl: Continued integration of graph algorithms.
	* graphops.man: Minimum spanning tree/forest as per Kruskal.
	* graph/tests/ops/kruskal.test:
	* graph/tests/XOpsControl:
	* graph/tests/XOpsSetup:

2008-11-04  Andreas Kupries <andreas_kupries@users.sourceforge.net>

	* graphops.tcl: Starting on the integration of Alejandro Paz's
	* graphops.man: (<vidriloco@gmail.com>) work on graph operations
	* graphops.test: for GSoC 2008. First operation: Adjacency matrix.
	* pkgIndex.tcl:
	* graph/test/XOpsControl:
	* graph/test/XOpsSetup:
	* graph/test/XOpsSupport:
	* graph/test/ops/adjmatrix.test:

2008-10-16  Andreas Kupries <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.11 ========================
	* 

2008-10-16  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* graph/graph.c (dup): Fixed duplication of an empty graph, mis-
	* graph/tests/command.test: handled the re-chaining of the node-
	  list in the source. Added test for this case.

2008-10-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* graph/graph.c (dup): Fixed missing propagation of arc weights.
	* graph/tests/command.test: Added test for graph assignment with
	  weights.

2008-10-11  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* graph.man: Extended graphs with the ability to define arc
	* graph.tcl: weights. Added methods to query and manipulate weight
	* graph_tcl.tcl: information. Extended the serialization format to
	* pkgIndex.tcl: handle graphs with and without arc weights.
	* graph/arc.c: Implemented in both Tcl and C. The Tcl code is