@@ -4,7 +4,7 @@
 # Copyright (c) 2008 Andreas Kupries <andreas_kupries@users.sourceforge.net>
 # All rights reserved.
 #
-# RCS: @(#) $Id: XOpsSetup,v 1.3 2008/11/08 06:43:18 andreas_kupries Exp $
+# RCS: @(#) $Id: XOpsSetup,v 1.4 2008/11/08 09:57:32 andreas_kupries Exp $
 
 # -------------------------------------------------------------------------
 
@@ -115,6 +115,201 @@ proc SETUP_B {} {
     #          > B --/5/--> D
     #
 
+    return
+}
+
+# -------------------------------------------------------------------------
+
+proc SETUP_C {} {
+    # Predefined Graph for testing on:
+    # - isConnected? 
+    # - isEulerian?
+    # - isBipartite?
+    # Author: Alejandro Eduardo Cruz Paz
+    # 28 August 2008
+
+    graph mygraph
+    mygraph node insert A
+    mygraph node insert B
+    mygraph node insert C
+    mygraph node insert D
+    mygraph node insert E
+    mygraph node insert F
+
+    mygraph arc insert A B A_B 
+    mygraph arc insert B D B_D
+    mygraph arc insert D C D_C
+    mygraph arc insert C A C_A
+    mygraph arc insert A E A_E
+    mygraph arc insert E F E_F
+
+    mygraph arc setweight A_B 9
+    mygraph arc setweight B_D 10
+    mygraph arc setweight D_C 4
+    mygraph arc setweight C_A 3
+    return
+}
+
+# -------------------------------------------------------------------------
+
+proc SETUP_D {} {
+    # Predefined Graph for testing on:
+    # - isConnected?
+    # - isEulerian?
+    # - isBipartite?
+    # Author: Alejandro Eduardo Cruz Paz
+    # 28 August 2008
+
+    graph mygraph
+    mygraph node insert a
+    mygraph node insert b
+    mygraph node insert c
+    mygraph node insert d
+    
+    mygraph node insert f
+    mygraph node insert g
+    mygraph node insert h
+    
+    mygraph node insert i
+    mygraph node insert j
+    
+    mygraph arc insert d f
+    mygraph arc insert h j
+    mygraph arc insert i j
+    mygraph arc insert f g
+    mygraph arc insert g h
+    mygraph arc insert h f
+    mygraph arc insert a b
+    mygraph arc insert b c
+    mygraph arc insert c d
+    mygraph arc insert d a
+    return
+}
+
+# -------------------------------------------------------------------------
+
+proc SETUP_E {} {
+    # Predefined Graph for testing on:
+    #  - isBipartite?
+    #  - maxMatching
+    # - isEulerian?
+    # Author: Alejandro Eduardo Cruz Paz
+    # 28 August 2008
+
+    graph mygraph	
+    mygraph node insert 1w
+    mygraph node insert 1b
+    mygraph node insert 2w
+    mygraph node insert 2b
+    mygraph node insert 3w
+    mygraph node insert 3b
+    mygraph node insert 4w
+    mygraph node insert 4b
+    mygraph node insert 5w
+    mygraph node insert 5b
+    mygraph node insert 6w
+    mygraph node insert 6b
+    mygraph node insert 7w
+    mygraph node insert 7b
+    mygraph node insert 8w
+    mygraph node insert 8b
+    
+    mygraph arc insert 1b 1w
+    mygraph arc insert 2b 1w
+    mygraph arc insert 1b 2w
+    mygraph arc insert 2b 2w
+    mygraph arc insert 2b 3w
+    mygraph arc insert 2b 4w
+    mygraph arc insert 3b 3w
+    mygraph arc insert 3w 4b
+    mygraph arc insert 3b 2w
+    mygraph arc insert 3b 5w
+    mygraph arc insert 4b 3w
+    mygraph arc insert 4b 4w
+    mygraph arc insert 4b 6w
+    mygraph arc insert 4w 5b
+    mygraph arc insert 4w 7b
+    mygraph arc insert 5b 5w
+    mygraph arc insert 5b 6w
+    mygraph arc insert 5w 6b
+    mygraph arc insert 6b 6w
+    mygraph arc insert 6w 7b
+    mygraph arc insert 6w 8b
+    mygraph arc insert 7b 7w 
+    mygraph arc insert 7w 8b
+    mygraph arc insert 8b 8w
+    mygraph arc insert 8w 7b
+    return
+}
+
+# -------------------------------------------------------------------------
+
+proc SETUP_F {} {
+    # Predefined Graph for testing on:
+    #  - isBipartite?
+    #  - maxMatching
+    # Author: Alejandro Eduardo Cruz Paz
+    # 28 August 2008
+    graph mygraph
+    
+    mygraph node insert 1w
+    mygraph node insert 1b
+    mygraph node insert 2w
+    mygraph node insert 2b
+    mygraph node insert 3w
+    mygraph node insert 3b
+    mygraph node insert 4w
+    mygraph node insert 4b
+    
+    mygraph arc insert 1b 3w
+    mygraph arc insert 1b 2w
+    mygraph arc insert 1b 4w
+    mygraph arc insert 4w 2b
+    mygraph arc insert 4w 3b
+    mygraph arc insert 2b 3w
+    mygraph arc insert 2b 1w
+    mygraph arc insert 3w 4b
+    mygraph arc insert 4b 1w
+    mygraph arc insert 1w 3b
+    mygraph arc insert 3b 2w
+    mygraph arc insert 4b 2w
+    return
+}
+
+# -------------------------------------------------------------------------
+
+proc SETUP_G {} {
+    # Predefined Graph for testing on:
+    #  - isBipartite?
+    #  - maxMatching 
+    #  - isBridge?
+    # Author: Alejandro Eduardo Cruz Paz
+    # 28 August 2008
+
+    graph mygraph
+    
+    mygraph node insert 1w
+    mygraph node insert 1b
+    mygraph node insert 2w
+    mygraph node insert 2b
+    mygraph node insert 3w
+    mygraph node insert 3b
+    mygraph node insert 4w
+    mygraph node insert 4b
+    mygraph node insert 5w
+    mygraph node insert 5b
+    
+    mygraph arc insert 1b 5w bridge1
+    mygraph arc insert 5w 3b nobridge
+    mygraph arc insert 5w 2b
+    mygraph arc insert 2b 4w
+    mygraph arc insert 3b 4w
+    mygraph arc insert 4b 4w bridge2
+    mygraph arc insert 2w 4b
+    mygraph arc insert 3w 4b
+    mygraph arc insert 2w 5b
+    mygraph arc insert 3w 5b
+    mygraph arc insert 5b 1w bridge3
     return
 }
 
