@@ -5,13 +5,18 @@
 #
 # All rights reserved.
 #
-# RCS: @(#) $Id: XOpsSupport,v 1.1 2008/11/05 07:28:53 andreas_kupries Exp $
+# RCS: @(#) $Id: XOpsSupport,v 1.2 2008/11/08 09:57:32 andreas_kupries Exp $
 
 # -------------------------------------------------------------------------
 
 # Code to generate various graphs to operate on.
 
 #----------------------------------------------------------------------
+
+proc bicanon {bi} {
+    return [lsort -dict [list [lsort -dict [lindex $bi 0]] [lsort -dict [lindex $bi 1]]]]
+}
+
 #----------------------------------------------------------------------
 #----------------------------------------------------------------------
 #----------------------------------------------------------------------
